[project]
name = "mcp-server-mas-sequential-thinking"
version = "0.7.0"
description = "MCP Agent Implementation for Sequential Thinking"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Frad LEE", email = "fradser@gmail.com" },
    { name = "Alain Ivars", email = "alainivars@gmail.com" },
]
dependencies = [
    "agno>=2.4.7",
    "asyncio",
    "exa-py>=2.0.0",
    "python-dotenv>=1.2.1",
    "mcp>=1.21.1",
    "groq>=0.34.1",
    "ollama>=0.6.1",
    "openrouter",
    "httpx[socks]>=0.28.1",
    "sqlalchemy>=2.0.44",
    "anthropic>=0.72.1",
    "fastapi>=0.115.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.3.0",
    "black>=25.11.0",
    "mypy>=1.18.2",
    "ruff>=0.14.5",
]

[project.scripts]
mcp-server-mas-sequential-thinking = "mcp_server_mas_sequential_thinking.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_mas_sequential_thinking"]

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "D",      # pydocstyle
    "UP",     # pyupgrade
    "YTT",    # flake8-2020
    "ANN",    # flake8-annotations
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit
    "BLE",    # flake8-blind-except
    "FBT",    # flake8-boolean-trap
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "COM",    # flake8-commas
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "DJ",     # flake8-django
    "EM",     # flake8-errmsg
    "EXE",    # flake8-executable
    "FA",     # flake8-future-annotations
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "G",      # flake8-logging-format
    "INP",    # flake8-no-pep420
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "PYI",    # flake8-pyi
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "SLOT",   # flake8-slots
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "TCH",    # flake8-type-checking
    "INT",    # flake8-gettext
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "PD",     # pandas-vet
    "PGH",    # pygrep-hooks
    "PL",     # pylint
    "TRY",    # tryceratops
    "FLY",    # flynt
    "NPY",    # numpy
    "AIR",    # airflow
    "PERF",   # perflint
    "FURB",   # refurb
    "LOG",    # flake8-logging
    "RUF",    # ruff-specific rules
]
ignore = [
    "D100",    # Missing docstring in public module
    "D101",    # Missing docstring in public class
    "D102",    # Missing docstring in public method
    "D103",    # Missing docstring in public function
    "D104",    # Missing docstring in public package
    "D105",    # Missing docstring in magic method
    "D107",    # Missing docstring in __init__
    "COM812",  # Trailing comma missing
    "ISC001",  # Implicitly concatenated string literals on one line
    "FBT001",  # Boolean positional arg in function definition
    "FBT002",  # Boolean default positional argument in function definition
    "S101",    # Use of assert detected
    "PLR0913", # Too many arguments to function call
    "PLR2004", # Magic value used in comparison
    "TRY003",  # Avoid specifying long messages outside the exception class
    "EM101",   # Exception must not use a string literal, assign to variable first
    "EM102",   # Exception must not use an f-string literal, assign to variable first
    # Legacy baseline rules relaxed for current codebase while retaining core correctness checks
    "ANN001",  # Missing type annotation for function argument
    "ANN003",  # Missing type annotation for **kwargs
    "ANN202",  # Missing return type annotation for private function
    "ANN204",  # Missing return type annotation for special method
    "ANN401",  # Dynamically typed expressions (Any)
    "ARG001",  # Unused function argument
    "ARG002",  # Unused method argument
    "ARG004",  # Unused static-method argument
    "B904",    # Raise without explicit cause in except
    "BLE001",  # Blind exception catches
    "DTZ003",  # datetime.utcnow usage
    "E402",    # Import not at top of module
    "E501",    # Line too long
    "ERA001",  # Commented-out code
    "FBT003",  # Boolean positional value in call
    "G004",    # Logging f-string interpolation
    "G201",    # Logging with exc_info
    "I001",    # Import sorting
    "ISC003",  # Explicit string concatenation
    "N803",    # Invalid argument name (non-snake-case for API compatibility)
    "N815",    # Mixed-case variable in class scope (API schema compatibility)
    "N818",    # Exception class naming suffix
    "PERF203", # try/except in loop
    "PLC0415", # Import outside top-level
    "PLR0911", # Too many return statements
    "PLR0912", # Too many branches
    "PLW2901", # Redefined loop variable
    "PT011",   # Broad pytest.raises
    "RUF001",  # Ambiguous unicode character
    "RUF012",  # Mutable class default
    "S110",    # try/except/pass
    "SIM105",  # Suppressible exception
    "SIM117",  # Nested with statements
    "SLF001",  # Private member access
    "TRY004",  # Prefer TypeError for type checks
    "TRY300",  # Consider else block in try
    "TRY401",  # Verbose exception message
    "UP037",   # Quoted annotation
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PLR2004", "ANN", "D"]
"__init__.py" = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["mcp_server_mas_sequential_thinking"]
split-on-trailing-comma = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
